<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>

    <string name="gardeners_delight_app">Gardeners Delight</string>
    
    <string name="task_manager_task_starting">The task is starting...</string>
    <string name="task_manager_task_working">The task is working...</string>
    
    <string name="first_screen_sign_in">Sign In</string>
    <string name="first_screen_sign_up">Sign Up</string>
	<string name="first_screen_privacy">About your privacy</string>
	
    <string name="signup_password2">Password Again</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_login">Login</string>
	<string name="signup_signup">Signup</string>
	<string name="signup_resend_password">Send Password</string>
	<string name="signup_email_exists">A profile with that email already exists</string>
    <string name="signup_error">Signup Error</string>
    <string name="signup_firstname">First Name</string>
    <string name="signup_error_password_mismatch">Passwords do not match</string>
    <string name="signup_error_no_firstname">Please enter a first name</string>
    <string name="signup_error_no_valid_email">Please enter a valid email</string>
    <string name="signup_success_title">Signup Successful</string>
    <string name="signup_success_message">Congratulations.  You are now signed up to Gardeners Delight.</string>
    <string name="signup_ok">OK</string>
    	
    <string name="login_login">Login</string>
    <string name="login_error_please_enter_values">Please enter username and password</string>
    <string name="login_error_invalid_credentials">Invalid login.  Please try again.</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>

    <string name="forgot_login_signin_button">FORGOT LOGIN SIGNIN BUTTON PRESSED</string>
    <string name="forgot_login_send_password_button">FORGOT LOGIN SEND PASSWORD BUTTON PRESSED</string>
    <string name="forgot_login_sign_in">Sign In</string>
	<string name="forgot_login_resend_password">Send Password</string>
	<string name="forgot_login_username_exists">The username already exists</string>
	
    <string name="home_do_you_have">Do you have something available?</string>
    <string name="home_do_you_want">or are you looking for something?</string>
    <string name="home_page">Home Page</string>
    
    <string name="have">Have</string>
    <string name="have_home">Have Home</string>
    <string name="have_header">What do you have?</string>
    <string name="have_submit">Submit</string>
    <string name="have_amount">How much do you have?</string>
    <string name="have_add_to_list">Add to list</string>
    <string name="have_have_list">Have List</string>
    <string name="have_already_in_have_list">Item already in list</string>
    <string name="have_success">Items added successfully</string>
    
    <string name="want">Need</string>
    <string name="want_home">Want Home</string>
    <string name="want_header">What are you looking for?</string>
    <string name="want_or">Or browse by category</string>
    <string name="want_just_start_typing">Just start typing</string>
    <string name="want_driving_distance">Driving distance</string>
    <string name="want_want_list">Shopping List</string>
    <string name="want_add_to_list">Add to list</string>
    <string name="want_search">Search</string>
    <string name="want_already_in_shopping_list">Item already in shopping list</string>
    <string name="want_search_button">THIS IS WHERE WE WOULD SEARCH</string>
    <string name="want_find_no_results">Nothing found</string>
    <string name="want_find_no_results_message">No results were found given your list and driving distance.  Please try again with different criteria.</string>    
    <string name="want_ok">OK</string>    
    <string name="want_no_gps_coordinates">Cannot determine location.  Please check that GPS is turned on.</string>
    
    <string name="want_location_view">Want Location View</string>
    <string name="want_location_view_have_list">Items Available</string>
    <string name="want_location_view_phone">Phone</string>
    <string name="want_location_view_email">Email</string>
    <string name="want_location_view_distance">Distance From Current Location</string>
            
    <string name="want_map_results">Mapped Results</string>
    <string name="want_map_clear_map">Clear Map</string>
    <string name="want_map_reset_map">Reset Map</string>
    <string name="want_map_default_info_window">Default Info Window</string>
    <string name="want_map_custom_info_window">Custom Info Window</string>
    <string name="want_map_custom_info_contents">Custom Info Contents</string>
    <string name="want_map_map_not_ready">Map not ready</string>
    
    <string-array name="item_amount_array">
        <item>A little</item>
        <item>Some</item>
        <item>Lots</item>
    </string-array>
</resources>

