<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/forgotLoginHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_login_username_exists"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/forgotLoginSigninButton"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.42"
            android:text="@string/forgot_login_sign_in" />

        <Button
            android:id="@+id/forgotLoginSendPasswordButton"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.38"
            android:text="@string/forgot_login_resend_password" />
    </LinearLayout>

</LinearLayout>