<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/haveHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/have_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <AutoCompleteTextView
        android:id="@+id/haveAutoCompleteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" >

        <requestFocus />
    </AutoCompleteTextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/haveAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:text="@string/have_amount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/haveAmountSpinner"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.26"
            android:entries="@array/item_amount_array" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/haveAutoCompleteAddButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/have_add_to_list" />

        <Button
            android:id="@+id/haveSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/have_submit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/haveHaveListTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/have_have_list"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/haveListView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="40dp" >

        </ListView>

    </LinearLayout>

</LinearLayout>