<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/wantHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/want_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <AutoCompleteTextView
        android:id="@+id/wantAutoCompleteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingBottom="20dp" >

        <requestFocus />
    </AutoCompleteTextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/wantDrivingDistanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:text="@string/want_driving_distance"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/wantDrivingDistanceValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
        	android:layout_alignParentRight="true"
        	android:gravity="right"
            android:layout_weight="0.01"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/wantDrivingDistanceSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/wantAutoCompleteAddButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/want_add_to_list" />

        <Button
            android:id="@+id/wantSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/want_search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/wantWantListTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/want_want_list"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/wantListView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="40dp" >

        </ListView>

    </LinearLayout>

</LinearLayout>